--- a/details/solution-v3.html
+++ b/details/solution-v3.html
@@ -16,11 +16,13 @@
   <main>
     <div class="solution-details">
       <div class="image-container">
-        <img src="https://i.imgur.com/fjonp9V.jpeg" alt="Afforestation Solution">
+        <img src="https://i.imgur.com/AWCnL12.jpeg" alt="Afforestation Solution">
       </div>
       <div class="description">
         <p>
-          Afforestation involves planting trees in areas where there were no trees before. This helps absorb CO<sub>2</sub> from the atmosphere, reducing the greenhouse effect and combating climate change.
+          *Solution: "Vehicle-to-Grid (V2G) Networks"
+
+Transform electric vehicles (EVs) into mobile energy storage units that feed surplus power back into the grid during peak demand, reducing reliance on fossil-fueled power plants and optimizing renewable energy use.
         </p>
         <a href="#" class="cta-button">Learn More</a>
       </div>
